# libc-

./: .gitignore  README.md  docker-compose.yml  main.cpp  newlib
.github/workflows/: arm64.yml  docker-image.yml
app/: CMakeLists.txt  Dockerfile
app/config/: profile_conan  remote_conan
app/src/: main.cpp
app/src/client/: CMakeLists.txt  conanfile.py  conanfile.txt  curlpattern.cpp  main.cpp  run
app/src/client/includes/: curlpattern.h
app/src/libA/: CMakeLists.txt  main.cpp  printer.cpp
app/src/libA/includes/: libA.h
app/src/libB/: CMakeLists.txt  libB.cpp  main.cpp
app/src/libB/includes/: libB.h  main.h
app/src/libC/: CMakeLists.txt  libC.cpp  main.cpp
app/src/libC/includes/: libC.h  main.h
app/src/libX/: CMakeLists.txt  calc.cpp  main.cpp
app/src/libX/includes/: mylib.h
app/src/server/: CMakeLists.txt  conanfile.txt
client/: main.cpp  run
conan/.conan_server/: server.conf
libA/: main.cpp  printer.cpp
libA/includes/: main.h
libB/: main  main.cpp
libC/: main  main.cpp
libC/includes/: main.h
libX/: calc.cpp  main.cpp  mylib.h
src/client/: main.cpp
